--- a/index.html
+++ b/index.html
@@ -10,18 +10,22 @@
     <header class="encabezado">
         <h1>Validación De Cédula Dominicana</h1>
     </header>
-
+   
     <section>
         <p>Valida cédula dominicana te permite verificar si tu número de identificación es correcto.</p>
     </section>
 
     <main class="central">
         <form>
-            <label for="cedula">Ingrese el Número De Cédula</label>
+            <label for="cedula"> Número De Cédula</label>
             <input type="text" name="cedula" id="cedula" placeholder="Número de cédula" maxlength="11">
             <button type="button" onclick="validar()">Verificar</button>
         </form>
     </main>
+
+    <footer>
+        <p>Derechos reservados Ana Alcantara; 2023</p>
+    </footer>
     
     <script src="Valida.js"></script>
 </body>
