--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        <p>Derechos reservados Ana Alcantara; 2023</p>
+        <small>Derechos reservados Ana Alcantara; 2023</small>
     </footer>
     
     <script src="Valida.js"></script>
