--- a/index.html
+++ b/index.html
@@ -6,23 +6,25 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Valida cedula dominicana</title>
    <link rel="stylesheet" href="stylo.css">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2/collection/components/icon/icon.css">
-   
+   <link rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2/collection/components/icon/icon.css">
+
 </head>
 
 <body>
    <header>
-      <div class="inf"><img src="./bandera.png" alt=""> Esta es una web donde brinda informacion de registro de la cedula dominicana</div>
+      <div class="inf"><img src="../IMG/bandera.png" alt=""> Esta es una web donde brinda informacion de registro de la
+         cedula dominicana</div>
       <div class="conten">
          <div class="cont-img">
-            <img src="./gob-img.png" alt="gob img">
+            <img src="../IMG/gob-img.png" alt="gob img">
          </div>
       </div>
    </header>
 
 
    <main class="central">
-      <h1>Validador de cedula  dominicana</h1>
+      <h1>Validador de cedula dominicana</h1>
 
       <!-- <section>
          <p>Valida cédula dominicana te permite verificar si tu número de identificación es correcto.</p>
@@ -30,14 +32,14 @@
 
       <form>
          <input type="text" name="cedula" id="cedula" placeholder="Número de cédula" maxlength="11">
-         <button id="btn" type="button" onclick="validar()"><img src="./buscar.png" alt=""></button>
+         <button id="btn" type="button" onclick="validar()"><img src="../IMG/buscar.png" alt=""></button>
       </form>
    </main>
 
    <footer>
-     <p>Derechos reservados Ana Alcantara; 2023</p> 
-    
-     <p class="logo-twitter"></p>
+      <p>Derechos reservados Ana Alcantara; 2023</p>
+
+      <p class="logo-twitter"></p>
    </footer>
 
    <script src="Valida.js"></script>
