--- a/index.html
+++ b/index.html
@@ -1,32 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Valida cedula dominicana</title>
-    <link rel="stylesheet" href="stylo.css">
-</head>
-<body>
-    <header class="encabezado">
-        <h1>Validación De Cédula Dominicana</h1>
-    </header>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Valida cedula dominicana</title>
+   <link rel="stylesheet" href="stylo.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/5.5.2/collection/components/icon/icon.css">
    
-    <section>
-        <p>Valida cédula dominicana te permite verificar si tu número de identificación es correcto.</p>
-    </section>
+</head>
 
-    <main class="central">
-        <form>
-            <label for="cedula"> Número De Cédula</label>
-            <input type="text" name="cedula" id="cedula" placeholder="Número de cédula" maxlength="11">
-            <button type="button" onclick="validar()">Verificar</button>
-        </form>
-    </main>
+<body>
+   <header>
+      <div class="inf"><img src="./bandera.png" alt=""> Esta es una web donde brinda informacion de registro de la cedula dominicana</div>
+      <div class="conten">
+         <div class="cont-img">
+            <img src="./gob-img.png" alt="gob img">
+         </div>
+      </div>
+   </header>
 
-    <footer>
-        <small>Derechos reservados Ana Alcantara; 2023</small>
-    </footer>
+
+   <main class="central">
+      <h1>Validador de cedula  dominicana</h1>
+
+      <!-- <section>
+         <p>Valida cédula dominicana te permite verificar si tu número de identificación es correcto.</p>
+      </section> -->
+
+      <form>
+         <input type="text" name="cedula" id="cedula" placeholder="Número de cédula" maxlength="11">
+         <button id="btn" type="button" onclick="validar()"><img src="./buscar.png" alt=""></button>
+      </form>
+   </main>
+
+   <footer>
+     <p>Derechos reservados Ana Alcantara; 2023</p> 
     
-    <script src="Valida.js"></script>
+     <p class="logo-twitter"></p>
+   </footer>
+
+   <script src="Valida.js"></script>
 </body>
+
 </html>
